# CameraStreaming

./: .gitignore  CMakeLists.txt  common.cmake
base/: CMakeLists.txt
base/inc/application/: application.hpp  cmd_argument.hpp
base/inc/system/: date.hpp  filesystem.hpp  network.hpp
base/src/application/: application.cpp
inc/application/: application.hpp  argument_base.hpp  cmd_argument.hpp
inc/camera/: camera.hpp  frame_loader.hpp
inc/system/: system.hpp
src/: main.cpp
src/application/: application.cpp  cmd_argument.cpp
src/camera/: camera.cpp  frame_loader.cpp  frame_streaming.cpp
streaming_client/: CMakeLists.txt
streaming_client/inc/application/: client_application.hpp
streaming_client/inc/camera/: viewer.hpp
streaming_client/src/: main.cpp
streaming_client/src/application/: client_application.cpp
streaming_client/src/camera/: viewer.cpp
streaming_server/: CMakeLists.txt
streaming_server/inc/application/: server_application.hpp
streaming_server/inc/camera/: camera.hpp  frame_displaying.hpp  frame_loader.hpp  frame_streaming.hpp
streaming_server/src/: main.cpp
streaming_server/src/application/: server_application.cpp
streaming_server/src/camera/: camera.cpp  frame_displaying.cpp  frame_loader.cpp  frame_streaming.cpp
